--- a/service_cep/.env
+++ b/service_cep/.env
@@ -1,4 +1,4 @@
-SERVICE_B_URL=http://service_cep:8080
-OTEL_SERVICE_NAME=service-a
+SERVICE_WEATHER_URL=http://service_weather:8080
+OTEL_SERVICE_NAME=service_CEP
 OTEL_COLLECTOR_URL=collector:4317
 PORT_API=8080
